--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,11 @@
 .menu {
   background-color: lightskyblue;
   display: flex;
-  position: sticky;
+  position: fixed;
+  top: 0;
   align-items: left;
   margin-bottom: 40px;
   height: 60px;
   width: 100%;
+  z-index: 1000;
 }
