--- a/src/Menu.css
+++ b/src/Menu.css
@@ -3,5 +3,16 @@
     line-height: 50px;
     color: gray;
     margin-left: 15px;
+    margin-right: 15px;
     align-items: center;
+    text-decoration: none;
+}
+
+.menu-sub {
+    font-size: 20px;
+    line-height: 50px;
+    color: gray;
+    margin-left: 15px;
+    align-items: center;
+    text-decoration: none;
 }
