--- a/src/hotels/hotelIndividual.module.css
+++ b/src/hotels/hotelIndividual.module.css
@@ -8,11 +8,19 @@
 .div h1 {
     display: flex;
     position: relative;
-    top: -20px;
+    top: -23px;
     height: 10px;
     font-size: 25px;
     font-weight: bold;
     margin-left: 30px;
+}
+
+.div h2 {
+    position: absolute;
+    font-size: 20px;
+    white-space: nowrap;
+    margin-left: 350px;
+    margin-top: 30px;
 }
 
 .div img {
@@ -27,4 +35,5 @@
     font-size: 17px;
     width: 60%;
     margin-left: 175px;
+    margin-top: 35px;
 }
