Adding design for rooms page and preparing to adding basic room functionla

--- a/src/rooms/roomDetails.module.css
+++ b/src/rooms/roomDetails.module.css
@@ -14,7 +14,7 @@
 }
 
 .container h2 {
-    display: inline;
+    display: flex;
     position: relative;
     font-size: 25px;
     margin-left: 30px;
