--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,24 @@ code {
   display: inline;
   position: relative;
   margin-left: 30px;
+  top: 25px;
   color: #fff;
   background-color: #007bff;
   border: none;
   padding: 10px 20px;
   text-decoration: none;
   cursor: pointer;
-  z-index: 1000;
+}
+
+.creation-link {
+  display: inline;
+  position: relative;
+  margin-left: 30px;
+  top: 25px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  padding: 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
 }
