--- a/src/hotels/hotelDetails.module.css
+++ b/src/hotels/hotelDetails.module.css
@@ -1,5 +1,5 @@
 .container{
-
+    margin-left: 30px;
 }
 
 .container h1 {
@@ -9,7 +9,6 @@
     height: 10px;
     font-size: 40px;
     font-weight: bold;
-    margin-left: 30px;
     margin-bottom: 80px;
 }
 
@@ -17,7 +16,6 @@
     display: flex;
     position: relative;
     font-size: 25px;
-    margin-left: 30px;
 }
 
 .container h3 {
@@ -27,7 +25,6 @@
     height: 10px;
     font-size: 40px;
     font-weight: bold;
-    margin-left: 30px;
     margin-bottom: 80px;
 }
 
@@ -37,7 +34,6 @@
     grid-auto-rows: 200px;
     max-width: 1050px;
     grid-gap: 10px;
-    margin-left: 20px;
     margin-top: 20px;
 }
 
@@ -54,7 +50,6 @@
     text-align: center;
     align-items: center;
     font-size: 20px;
-    width: 90%;
-    margin-left: 5%;
+    margin-right: 30px;
     margin-bottom: 40px;
 }
