--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,20 @@ code {
   font-size: 16px;
 }
 
+.filter-btn {
+  display: inline;
+  position: relative;
+  top: 15px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  margin-right: 45px;
+  padding: 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 .spec-link {
   text-decoration: none;
 }
