--- a/src/hotels/filterHotels.module.css
+++ b/src/hotels/filterHotels.module.css
@@ -1,4 +1,6 @@
 .div {
+    display: block;
+    position: relative;
     margin-left: 30px;
     margin-bottom: 70px;
 }
@@ -10,13 +12,13 @@
     height: 10px;
     font-size: 40px;
     font-weight: bold;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .form {
-    position: absolute;
-    right: 0;
-    margin-right: 140px;
+    display: block;
+    position: relative;
+    top: 50px;
 }
 
 .form input {
