--- a/src/reservations/reservationForm.module.css
+++ b/src/reservations/reservationForm.module.css
@@ -12,3 +12,9 @@
     font-weight: bold;
     margin-bottom: 80px;
 }
+
+.form text {
+    margin-bottom: 20px;
+    width: 20%;
+    font-size: 20px;
+}
