--- a/src/rooms/filterRooms.module.css
+++ b/src/rooms/filterRooms.module.css
@@ -1,13 +1,14 @@
 .div {
+    display: block;
+    position: relative;
     margin-left: 30px;
     margin-bottom: 70px;
 }
 
 .form {
-    position: absolute;
-    right: 0;
-    margin-right: 140px;
-    padding-bottom: 70px;
+    display: block;
+    position: relative;
+    top: 35px;
 }
 
 .form input {
