--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ code {
   bottom: 20px;
   margin-left: 30px;
   color: #fff;
-  background-color: #d31b11;
+  background-color: red;
   border: none;
   padding: 10px 20px;
   text-decoration: none;
@@ -106,4 +106,28 @@ code {
   align-items: center;
   height: 100vh;
   font-size: 30px;
+}
+
+.promote-button {
+  display: inline;
+  position: relative;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  padding: 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.demote-button {
+  display: inline;
+  position: relative;
+  color: #fff;
+  background-color: red;
+  border: none;
+  padding: 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 16px;
 }
